added feature for follower and following of a user and doc update
